--- a/FirstGameHS.cabal
+++ b/FirstGameHS.cabal
@@ -12,8 +12,7 @@ category:               Game
 build-type:             Simple
 cabal-version:          >=1.10
 extra-source-files:     README.md
-data-dir:               Assets
-data-files:             *.bmp
+data-files:             Assets/*.bmp
 
 executable FirstGameHS
   hs-source-dirs:       src
@@ -21,4 +20,5 @@ executable FirstGameHS
   default-language:     Haskell2010
   build-depends:        base >= 4.7 && < 5
                         , sdl2
+                        , pretty-simple
   other-modules:        Paths_FirstGameHS
