Started an animations module - One function takes a directory and will return a list of tuples containing animation data - Not finished yet, untested

--- a/FirstGameHS.cabal
+++ b/FirstGameHS.cabal
@@ -21,4 +21,7 @@ executable FirstGameHS
   build-depends:        base >= 4.7 && < 5
                         , sdl2
                         , pretty-simple
+                        , directory
+                        , aeson
   other-modules:        Paths_FirstGameHS
+                        , Animations
