Continued work on Animations module, using JSON to load rectangles. In progress.

--- a/FirstGameHS.cabal
+++ b/FirstGameHS.cabal
@@ -23,5 +23,6 @@ executable FirstGameHS
                         , pretty-simple
                         , directory
                         , aeson
+                        , bytestring
   other-modules:        Paths_FirstGameHS
                         , Animations
