--- a/FirstGameHS.cabal
+++ b/FirstGameHS.cabal
@@ -23,6 +23,7 @@ executable FirstGameHS
                         , pretty-simple
                         , directory
                         , aeson
+                        , aeson-pretty
                         , bytestring
   other-modules:        Paths_FirstGameHS
                         , Animations
