--- a/FirstGameHS.cabal
+++ b/FirstGameHS.cabal
@@ -13,6 +13,7 @@ build-type:             Simple
 cabal-version:          >=1.10
 extra-source-files:     README.md
 data-files:             Assets/*.bmp
+                        , Assets/*.png
 
 executable FirstGameHS
   hs-source-dirs:       src
@@ -20,6 +21,7 @@ executable FirstGameHS
   default-language:     Haskell2010
   build-depends:        base >= 4.7 && < 5
                         , sdl2
+                        , sdl2-image
                         , pretty-simple
                         , directory
                         , aeson
