Modularised animation module - Now there's a dedicated module for loading animations and a dedicated module for converting them to SDL (and using them) - This means that if I switch from SDL I have a little bit of a foundation for saving and loading animation JSONs

--- a/FirstGameHS.cabal
+++ b/FirstGameHS.cabal
@@ -28,4 +28,5 @@ executable FirstGameHS
                         , aeson-pretty
                         , bytestring
   other-modules:        Paths_FirstGameHS
-                        , Animations
+                        , SDLAnimations
+                        , AnimationLoader
