Animations now play frame-independantly and nicely - DeltaTime is now created using SDL.getTicks and seems okay - After looking into frame delay, the current method works just fine - Need to look at where to store 'tickRate', the thing that controls how fast animations play. This could be stored per animation or per set, or globally - Some work might need to be done to make the animation functions work nicer in a bigger system, but for now they're comfy

--- a/FirstGameHS.cabal
+++ b/FirstGameHS.cabal
@@ -14,6 +14,7 @@ cabal-version:          >=1.10
 extra-source-files:     README.md
 data-files:             Assets/*.bmp
                         , Assets/*.png
+                        , Assets/*.json
 
 executable FirstGameHS
   hs-source-dirs:       src
