Created new modules: Input and GameState - Starting to modularise the game a bit for management - InputModule will eventually become a dedicated options module but for now holds KBs only - GameState module is a collection of all the modules to hold the state of the game - To avoid cycling, paramatarisation is used on the input module as it doesn't actually need to know about GameState

--- a/FirstGameHS.cabal
+++ b/FirstGameHS.cabal
@@ -25,9 +25,12 @@ executable FirstGameHS
                         , sdl2-image
                         , pretty-simple
                         , directory
+                        , containers
                         , aeson
                         , aeson-pretty
                         , bytestring
   other-modules:        Paths_FirstGameHS
+                        , GameState
                         , SDLAnimations
                         , AnimationLoader
+                        , InputModule
