[Broken] Started work on entities - Entities are going to replace 'Guy', and are the fundamental structure to a game - The entities list inside the game state will need to contain every object in the game, therefore there needs to be multiple data constructors to allow different types of Entities to be made (Similar to Bool being True or False, and Entity will be a dynamic entity such as a character or a static object to be rendered - Build is currently broken

--- a/FirstGameHS.cabal
+++ b/FirstGameHS.cabal
@@ -31,6 +31,7 @@ executable FirstGameHS
                         , bytestring
   other-modules:        Paths_FirstGameHS
                         , GameState
+                        , Entity
                         , SDLAnimations
                         , AnimationLoader
                         , InputModule
