--- a/FirstGameHS.cabal
+++ b/FirstGameHS.cabal
@@ -23,13 +23,13 @@ executable FirstGameHS
   build-depends:        base >= 4.7 && < 5
                         , sdl2
                         , sdl2-image
-                        , reactive-banana
                         , pretty-simple
                         , directory
                         , containers
                         , aeson
                         , aeson-pretty
                         , bytestring
+                        , reflex
   other-modules:        Paths_FirstGameHS
                         , GameState
                         , SDLAnimations
