--- a/stack.yaml
+++ b/stack.yaml
@@ -39,7 +39,10 @@ packages:
 - .
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-# extra-deps: []
+extra-deps:
+- git: git://github.com/reflex-frp/reflex.git
+  commit: 9f3356fecb1620f74b45291b38aaaafbe92458fa
+- prim-uniq-0.1.0.1
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
