--- a/stack.yaml
+++ b/stack.yaml
@@ -43,6 +43,8 @@ extra-deps:
 - git: git://github.com/reflex-frp/reflex.git
   commit: 9f3356fecb1620f74b45291b38aaaafbe92458fa
 - prim-uniq-0.1.0.1
+- git: git://github.com/schell/reflex-sdl2.git
+  commit: b2089accef02ee218a8ec7d909471b34f824f09e
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
