Added Common, Game and GameSetup modules - GameState has been converted to GameSetup - GameSetup is a collection of non-setting game options - Game controls the game loop and has a function for starting it - Common contains the loading texture from file function as well as FRP layer functions - Added comments to every file for niceness - Stripped out unnecessary imports etc

--- a/FirstGameHS.cabal
+++ b/FirstGameHS.cabal
@@ -32,7 +32,9 @@ executable FirstGameHS
                         , reflex
                         , reflex-sdl2
   other-modules:        Paths_FirstGameHS
-                        , GameState
+                        , Game
+                        , GameSetup
+                        , Common
                         , SDLAnimations
                         , AnimationLoader
                         , InputModule
