Working FPS counter, works with uncapped frame rate

--- a/FirstGameHS.cabal
+++ b/FirstGameHS.cabal
@@ -21,7 +21,7 @@ executable FirstGameHS
                         , sdl2
                         , sdl2-image
                         , sdl2-ttf
-                        , pretty-simple
+                        , time
                         , directory
                         , containers
                         , text
